--- a/Website.css
+++ b/Website.css
@@ -24,10 +24,10 @@
     align-self: center;
 }
 
-#time {
+#timeDiv {
     background-color: green;
     width: fit-content;
-    height: 100px;
+    height: max-content;
     display: flex;
     align-self: flex-end;
     justify-content: center;
@@ -36,11 +36,15 @@
 #startTimeDiv {
     background-color: blue;
     display: flex;   
+    align-items: center;
+    font-size: 20px;
 }
 
 #stopTimeDiv {
     background-color: red;
     display: flex;
+    align-items: center;
+    font-size: 20px;
 }
 
 #buttons {
@@ -50,12 +54,23 @@
     justify-self: center;
 }
 
-#graphSwitcher {
+#graphSwitcherDiv {
     background-color: aquamarine;
     width: 150px;
     height: 800px;
     justify-self: flex-start;
 }
+
+#tempButton {
+    background-color: crimson;
+    border-radius: 8px;
+    margin-bottom: 12px;
+}   #tempButton:hover {background-color: orangered;}
+
+#humButton {
+    background-color: blue;
+    border-radius: 8px;
+}   #humButton:hover {background-color: dodgerblue;}
 
 .button {
     width: 150px;
