--- a/Website.css
+++ b/Website.css
@@ -61,15 +61,17 @@
 }
 
 #tempButton {
-    background-color: crimson;
+    background-color: red;
+    opacity: 0.7;
     border-radius: 8px;
     margin-bottom: 12px;
-}   #tempButton:hover {background-color: orangered;}
+}   #tempButton:hover {opacity: 1;}
 
 #humButton {
     background-color: blue;
+    opacity: 0.7;
     border-radius: 8px;
-}   #humButton:hover {background-color: dodgerblue;}
+}   #humButton:hover {opacity: 1;}
 
 .button {
     width: 100%;
