--- a/Main files/Website.css
+++ b/Main files/Website.css
@@ -1,10 +1,15 @@
 #body {
-    background-color: bisque;
+    background-color: lightblue;
     border: 2px black solid;
     width: auto;
     height: 800px;
     display: flex;
     flex-wrap: row;
+    justify-content: center;
+}
+
+#titel {
+    display: flex;
     justify-content: center;
 }
 
