--- a/Main files/Website.css
+++ b/Main files/Website.css
@@ -1,7 +1,13 @@
+body { /*..*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #body {
-    background-color: lightblue;
+    background-color: bisque; 
     border: 2px black solid;
-    width: auto;
+    width: 100%;
     height: 800px;
     display: flex;
     flex-wrap: row;
@@ -9,12 +15,16 @@
 }
 
 #titel {
+    border: 3.5px black solid;
+    border-top-left-radius: 10px; border-bottom-right-radius: 10px; /*proof of concept*/
+    width: 310px;
+    height: auto;
     display: flex;
     justify-content: center;
 }
 
 #centre {
-    border: 5px yellow solid;
+    background-color: lightblue;
     width: 75%;
     height: auto;
     display: flex;
@@ -23,7 +33,6 @@
 }
 
 #myPlot {
-    border: 5px black solid;
     margin-top: 25px;
     width: 85%;
     height: 50%;
@@ -59,7 +68,7 @@
 }
 
 #graphSwitcherDiv {
-    background-color: aquamarine;
+    background-color: aqua;
     width: 7.5%;
     height: 800px;
     justify-self: flex-start;
@@ -68,7 +77,7 @@
 #tempButton {
     background-color: red;
     opacity: 1;
-    border-radius: 8px;
+    border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;
     margin-bottom: 12px;
 }   #tempButton:hover {opacity: 0.7;}
 
@@ -84,13 +93,13 @@
 }
 
 .filler1 {
-    background-color: azure;
+    background-color: lightskyblue;
     width: 5%;
     height: 800px;
 }
 
 .filler2 {
-    background-color: aquamarine;
+    background-color: aqua;
     width: 7.5%;
     height: 800px;
 }
