--- a/Main files/Website.css
+++ b/Main files/Website.css
@@ -1,4 +1,4 @@
-body { /*..*/
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,9 +14,9 @@ body { /*..*/
     justify-content: center;
 }
 
-#titel {
+#header {
     border: 3.5px black solid;
-    border-top-left-radius: 10px; border-bottom-right-radius: 10px; /*proof of concept*/
+    border-top-left-radius: 10px; border-bottom-right-radius: 10px;
     width: 310px;
     height: auto;
     display: flex;
@@ -38,28 +38,45 @@ body { /*..*/
     height: 50%;
 }
 
-#timeDiv {
+#timeDivDiv {
     background-color: green;
     margin-top: 15px;
-    width: fit-content;
-    height: max-content;
+    width: 60%;
+    height: 15%;
     display: flex;
-    justify-content: center;
+}
+
+#timeDiv {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-flow: column nowrap;
 }
 
 #startTimeDiv {
     background-color: blue;
-    height: 55px;
+    border: 2px blue solid;
+    width: 100%;
+    height: 50%;
     display: flex;   
     align-items: center;
-}   #startTime {height: 50px;}
+}
 
 #stopTimeDiv {
     background-color: red;
-    height: 55px;
+    border: 2px red solid;
+    width: 100%;
+    height: 50%;
     display: flex;
     align-items: center;
-}   #stopTime {height: 50px;}
+}
+
+#refreshButton {
+    background-color: purple;
+    border: 2px purple solid;
+    width: 20%;
+    height: 100%;
+}
 
 #buttons {
     height: fit-content;
@@ -73,19 +90,16 @@ body { /*..*/
     height: 800px;
     justify-self: flex-start;
 }
-
 #tempButton {
     background-color: red;
-    opacity: 1;
-    border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;
+    border-radius: 8px;
     margin-bottom: 12px;
-}   #tempButton:hover {opacity: 0.7;}
+}   #tempButton:hover {background-color: pink; border: 2px black solid;}
 
 #humButton {
     background-color: blue;
-    opacity: 1;
     border-radius: 8px;
-}   #humButton:hover {opacity: 0.7;}
+}   #humButton:hover {background-color: lightblue; border: 2px black solid;}
 
 .button {
     width: 100%;
