--- a/Main files/Website.css
+++ b/Main files/Website.css
@@ -41,41 +41,41 @@ body {
 #timeDivDiv {
     background-color: green;
     margin-top: 15px;
-    width: 60%;
-    height: 15%;
+    width: 42.5%;
+    height: 10%;
     display: flex;
 }
 
 #timeDiv {
-    width: 80%;
+    width: 75%;
     height: 100%;
     display: flex;
     flex-flow: column nowrap;
 }
 
 #startTimeDiv {
-    background-color: blue;
-    border: 2px blue solid;
-    width: 100%;
-    height: 50%;
-    display: flex;   
-    align-items: center;
-}
-
-#stopTimeDiv {
-    background-color: red;
-    border: 2px red solid;
+    background-color: lightgreen;
     width: 100%;
     height: 50%;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-}
+}   #startTime {height: auto; width: 35%; margin-right: 2.5%;}
+
+#stopTimeDiv {
+    background-color: khaki;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}   #stopTime {height: auto; width: 35%; margin-right: 2.5%;}
 
 #refreshButton {
-    background-color: purple;
-    border: 2px purple solid;
-    width: 20%;
-    height: 100%;
+    background-color: lawngreen;
+    border: 0ch;
+    width: 25%;
+    height: auto;
 }
 
 #buttons {
