--- a/Main files/Website.css
+++ b/Main files/Website.css
@@ -78,11 +78,29 @@ body {
     height: auto;
 }   #refreshButton:hover {border: 2px black solid; opacity: 85%;}
 
-#buttons {
-    height: fit-content;
+#sensorButtonsDiv {
     margin-top: 20px;
     border: 1px black solid;
+    width: 30%;
+    height: 3.5%;
+    display: flex;
+    justify-content: center;
 }
+
+.switch {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}   .switch input {opacity: 0; height: 0px; width: 0;}
+    .switch:hover {opacity: 85%; border: 1px black solid;}
+
+#S1Label{background-color: rgb(255,0,0)}
+#S2Label{background-color: rgb(0,255,0)}
+#S3Label{background-color: rgb(0,0,255)}
+#S4Label{background-color: rgb(0,255,255)}
+#S5Label{background-color: rgb(255,255,0)}
 
 #graphSwitcherDiv {
     background-color: aqua;
@@ -91,9 +109,9 @@ body {
     justify-self: flex-start;
 }
 #tempButton {
+    margin-bottom: 12px;
     background-color: red;
     border-radius: 8px;
-    margin-bottom: 12px;
 }   #tempButton:hover {background-color: pink; border: 2px black solid;}
 
 #humButton {
