--- a/Main files/Website.css
+++ b/Main files/Website.css
@@ -4,22 +4,25 @@ body {
     align-items: center;
 }
 
+#header {
+    margin: 0%;
+    border: 3.5px black solid;
+    border-top-left-radius: 10px; border-bottom-right-radius: 10px;
+    background-image: linear-gradient(to top right, blue, white);
+    width: 310px;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+}
+
 #body {
     background-color: bisque; 
     border: 2px black solid;
+    margin-top: 63px;
     width: 100%;
     height: 800px;
     display: flex;
     flex-wrap: row;
-    justify-content: center;
-}
-
-#header {
-    border: 3.5px black solid;
-    border-top-left-radius: 10px; border-bottom-right-radius: 10px;
-    width: 310px;
-    height: auto;
-    display: flex;
     justify-content: center;
 }
 
