--- a/Main files/Website.css
+++ b/Main files/Website.css
@@ -1,24 +1,12 @@
 body {
+    background-color: lightblue;
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#header {
-    margin: 0%;
-    border: 3.5px black solid;
-    border-top-left-radius: 10px; border-bottom-right-radius: 10px;
-    background-image: linear-gradient(to top right, blue, white);
-    width: 310px;
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-}
-
-#body {
-    background-color: bisque; 
-    border: 2px black solid;
-    margin-top: 63px;
+#graphBody {
     width: 100%;
     height: 800px;
     display: flex;
@@ -27,7 +15,6 @@ body {
 }
 
 #centre {
-    background-color: lightblue;
     width: 75%;
     height: auto;
     display: flex;
@@ -42,7 +29,6 @@ body {
 }
 
 #timeDivDiv {
-    background-color: green;
     margin-top: 15px;
     width: 42.5%;
     height: 10%;
@@ -106,7 +92,6 @@ body {
 #S5Label{background-color: rgb(255,255,0)}
 
 #graphSwitcherDiv {
-    background-color: aqua;
     width: 7.5%;
     height: 800px;
     justify-self: flex-start;
@@ -128,13 +113,11 @@ body {
 }
 
 .filler1 {
-    background-color: lightskyblue;
     width: 5%;
     height: 800px;
 }
 
 .filler2 {
-    background-color: aqua;
     width: 7.5%;
     height: 800px;
 }
