--- a/TemperaturProjektet/Main files/Graph.css
+++ b/TemperaturProjektet/Main files/Graph.css
@@ -4,11 +4,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+}
+
+.background {
+    width: 100%;
+    height: 100%;
 }
 
 #graphBody {
     width: 100%;
-    height: 800px;
+    height: fit-content;
     display: flex;
     flex-wrap: row;
     justify-content: center;
@@ -40,10 +46,12 @@ body {
     height: 100%;
     display: flex;
     flex-flow: column nowrap;
+    
 }
 
 #startTimeDiv {
-    background-color: lightgreen;
+    background-color: rgb(220, 0, 0);
+    border-top-left-radius: 15px;
     width: 100%;
     height: 50%;
     display: flex;
@@ -52,7 +60,8 @@ body {
 }   #startTime {height: auto; width: 35%; margin-right: 2.5%;}
 
 #stopTimeDiv {
-    background-color: khaki;
+    background-color: rgb(255, 82, 75);
+    border-bottom-left-radius: 15px;
     width: 100%;
     height: 50%;
     display: flex;
@@ -61,7 +70,13 @@ body {
 }   #stopTime {height: auto; width: 35%; margin-right: 2.5%;}
 
 #refreshButton {
-    background-color: lawngreen;
+    background-image: url(https://www.freeiconspng.com/thumbs/reload-icon/arrow-refresh-reload-icon-29.png);
+    background-color: rgb(255, 0, 6);
+    background-size: 75%;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
     border: 0ch;
     width: 25%;
     height: auto;
@@ -85,11 +100,11 @@ body {
 }   .switch input {opacity: 0; height: 0px; width: 0;}
     .switch:hover {opacity: 85%; border: 1px black solid;}
 
-#S1Label{background-color: rgb(255,0,0)}
-#S2Label{background-color: rgb(0,255,0)}
-#S3Label{background-color: rgb(0,0,255)}
-#S4Label{background-color: rgb(0,255,255)}
-#S5Label{background-color: rgb(255,255,0)}
+#S1Label{background-color: rgb(220, 0, 0)}
+#S2Label{background-color: rgb(255, 82, 75)}
+#S3Label{background-color: rgb(220, 0, 0)}
+#S4Label{background-color: rgb(255, 82, 75)}
+#S5Label{background-color: rgb(220, 0, 0)}
 
 #graphSwitcherDiv {
     width: 12.5%;
@@ -118,4 +133,22 @@ body {
 .filler {
     width: 12.5%;
     height: 800px;
+}
+
+img.background {
+    position: absolute;
+    left: 0px;
+    top: 55px;
+    z-index: -1;
+    width: 100%;
+    height: 110%;
+    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+    filter: blur(5px);
+    }
+
+
+footer {
+    background-color: white;
+    height: 50px;
+    width: 100%;
 }
