--- a/TemperaturProjektet/Main files/Graph.css
+++ b/TemperaturProjektet/Main files/Graph.css
@@ -151,4 +151,6 @@ footer {
     background-color: white;
     height: 50px;
     width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
