--- a/TemperaturProjektet/Main files/Graph.css
+++ b/TemperaturProjektet/Main files/Graph.css
@@ -91,48 +91,96 @@ body {
     justify-content: center;
 }
 
-.switch {
+.switch1 {
+    background-color: rgb(220, 0, 0);
     width: 20%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}   .switch input {opacity: 0; height: 0px; width: 0;}
-    .switch:hover {opacity: 85%; border: 1px black solid;}
+}   .switch1 input {opacity: 0; height: 0px; width: 0;}
+    .switch1:hover {opacity: 85%; border: 1px black solid;}
 
-#S1Label{background-color: rgb(220, 0, 0)}
-#S2Label{background-color: rgb(255, 82, 75)}
-#S3Label{background-color: rgb(220, 0, 0)}
-#S4Label{background-color: rgb(255, 82, 75)}
-#S5Label{background-color: rgb(220, 0, 0)}
+.switch2 {
+    background-color: rgb(255, 82, 75);
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}   .switch2 input {opacity: 0; height: 0px; width: 0;}
+    .switch2:hover {opacity: 85%; border: 1px black solid;}
+
+.switch1Active {
+    background-color: rgb(220, 0, 0);   
+    opacity: 50%;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}   .switch1Active input {opacity: 0; height: 0px; width: 0;}
+    .switch1Active:hover {opacity: 85%; border: 1px black solid;}
+    
+.switch2Active {
+    background-color: rgb(255, 82, 75);   
+    opacity: 50%;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}   .switch2Active input {opacity: 0; height: 0px; width: 0;}
+    .switch2Active:hover {opacity: 85%; border: 1px black solid;}
 
 #graphSwitcherDiv {
     width: 12.5%;
-    height: 800px;
+    height: 700px;
     justify-self: flex-start;
 }
-#tempButton {
+.tempButton {
     margin-top: 15%;
     margin-bottom: 12px;
     margin-left: 15%;
-    background-color: red;
+    background-color: rgb(220, 0, 0);
+    border: 2px solid;
     border-radius: 8px;
-}   #tempButton:hover {background-color: pink; border: 2px black solid;}
-
-#humButton {
-    margin-left: 15%;
-    background-color: blue;
-    border-radius: 8px;
-}   #humButton:hover {background-color: lightblue; border: 2px black solid;}
-
-.button {
     width: 100%;
     height: 35px;
-}
+}   .tempButton:hover {border: 2px white solid;}
 
+/*.tempButtonActive {
+    margin-top: 15%;
+    margin-bottom: 12px;
+    margin-left: 15%;
+    background-color: rgb(220, 0, 0);
+    border: 2px white solid;
+    border-radius: 8px;
+    width: 100%;
+    height: 35px;
+}   .tempButtonActive:hover {border: 2px black solid;}
+*/
+.humButton {
+    margin-left: 15%;
+    background-color: rgb(255, 82, 75);
+    border: 2px solid;
+    border-radius: 8px;
+    width: 100%;
+    height: 35px;
+}   .humButton:hover {border: 2px white solid;}
+
+/*.humButtonActive {
+    margin-left: 15%;
+    background-color: rgb(255, 82, 75);
+    border: 2px white solid;
+    border-radius: 8px;
+    width: 100%;
+    height: 35px;
+}   .humButtonActive:hover {border: 2px black solid;}
+*/
 .filler {
     width: 12.5%;
-    height: 800px;
+    height: 700px;
 }
 
 img.background {
