--- a/TemperaturProjektet/Main files/About.css
+++ b/TemperaturProjektet/Main files/About.css
@@ -1,5 +1,15 @@
+img.background {
+    position: absolute;
+    left: 0px;
+    top: 55px;
+    z-index: -1;
+    width: 100%;
+    height: 110%;
+    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+    filter: blur(5px);
+}
+
 body{
-    background-color: lightblue;
     margin: 0;
 }
 
@@ -37,6 +47,6 @@ body{
 }
 
 .copyEmail {
-    background-color: aquamarine;
+    background-color: rgb(255, 82, 75);
     border: 1px black solid;
 }   .copyEmail:hover {opacity: 85%; border: 2px black solid;}
