--- a/TemperaturProjektet/Main files/Settings.css
+++ b/TemperaturProjektet/Main files/Settings.css
@@ -1,5 +1,15 @@
+img.background {
+    position: absolute;
+    left: 0px;
+    top: 55px;
+    z-index: -1;
+    width: 100%;
+    height: 110%;
+    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+    filter: blur(5px);
+}
+
 body {
-    background-color: lightblue;
     margin: 0;
 }
 .settings {
@@ -8,5 +18,9 @@ body {
 
 .sensorInput {
     border: 0;
-    background-color: aquamarine;
+    background-color: rgb(255, 82, 75);
 }   .sensorInput:hover {opacity: 85%; border: 2px black solid;}
+
+#saveSensorNames{
+    background-color: rgb(255, 82, 75);
+}
