--- a/TemperaturProjektet/Main files/About.css
+++ b/TemperaturProjektet/Main files/About.css
@@ -5,7 +5,7 @@ img.background {
     z-index: -1;
     width: 100%;
     height: 110%;
-    -webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+    -webkit-filter: blur(2px);
     filter: blur(5px);
 }
 
