--- a/TemperaturProjektet/Main files/About.css
+++ b/TemperaturProjektet/Main files/About.css
@@ -24,24 +24,26 @@ body{
     margin-top: 2%;
 }
 
-.aboutProject {
+#aboutProject {
     width: 70%;
-}
+    padding: 1%;
+    text-align: center;
+}   #aboutProject:hover {background-color: rgb(255, 255, 255, 25%); border: 2px rgb(220, 0, 0, 100%) solid; border-radius: 4px; color: rgb(0, 0, 0, 100%);}
 
-.contacts {
+#contacts {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .contact {
-    width: 18%;
-}
-
-#roxContact {
-    margin-left: 5%;
-}
+    padding: 2%;
+    text-align: center;
+}   .contact:hover {background-color: rgb(255, 255, 255, 25%); border: 2px rgb(220, 0, 0, 100%) solid; border-radius: 4px; color: rgb(0, 0, 0, 100%);}
 
 .copyEmail {
-    background-color: rgb(255, 82, 75);
-    border: 1px black solid;
-}   .copyEmail:hover {opacity: 85%; border: 2px black solid;}
+    background-color: transparent;
+    border: 2px rgb(220, 0, 0) solid;
+    border-radius: 4px;
+}   .copyEmail:hover {background-color: rgb(255, 82, 75);}
