--- a/TemperaturProjektet/Main files/Navigation.css
+++ b/TemperaturProjektet/Main files/Navigation.css
@@ -1,66 +1,71 @@
-#navBar {
-    background-color: white;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+/*entire navigation bar*/
+    #navBar {
+        background-color: white;
+        width: 100%;
+        height: 60px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-#iHetasteLaget {
-    border: 0;
-    border-top-left-radius: 12px;
-    border-bottom-right-radius: 12px;
-    margin-left: 2%;
-    width: 15%;
-    height: 60%;
-    animation-name: logo; 
-    animation-duration: 5s; 
-    animation-iteration-count: infinite;
-    font-size: large;
-}
+/*"logo", left side*/
+    #iHetasteLaget {
+        border: 0;
+        border-top-left-radius: 12px;
+        border-bottom-right-radius: 12px;
+        margin-left: 2%;
+        width: 15%;
+        height: 60%;
+        animation-name: logo; 
+        animation-duration: 5s; 
+        animation-iteration-count: infinite;
+        font-size: large;
+    }
 
-@keyframes logo {
-    0% {background-color: white;}
-    25% {background-color: rgb(220, 0, 0);}
-    50% {background-color: white;}
-    75% {background-color: rgb(220, 0, 0);}
-}
+    @keyframes logo {
+        0% {background-color: white;}
+        25% {background-color: rgb(220, 0, 0);}
+        50% {background-color: white;}
+        75% {background-color: rgb(220, 0, 0);}
+    }
 
-#navButtonsDiv {
-    width: 40%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
+/*all three right side buttons*/
+    #navButtonsDiv {
+        width: 40%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
 
-.navButton {
-    background-color: white;
-    font-weight: bold;
-    height: 60%;
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}   .navButton:hover {animation-name: navButton;  animation-duration: 4s; animation-iteration-count: infinite;}
+/*singular button, shared class*/
+    .navButton {
+        background-color: white;
+        font-weight: bold;
+        height: 60%;
+        width: 25%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }   .navButton:hover {animation-name: navButton;  animation-duration: 4s; animation-iteration-count: infinite;}
 
-@keyframes navButton {
-    0% {background-color: white;}
-    25% {background-color: rgb(255, 82, 75);}
-    50% {background-color: white;}
-    75% {background-color: rgb(255, 82, 75);}
-    100% {background-color: white;}
-}
+    @keyframes navButton {
+        0% {background-color: white;}
+        25% {background-color: rgb(255, 82, 75);}
+        50% {background-color: white;}
+        75% {background-color: rgb(255, 82, 75);}
+        100% {background-color: white;}
+    }
 
-#navTheGraph {
-    margin-right: 8%;
-}
+/*individual buttons*/        
+    #navTheGraph {
+        margin-right: 8%;
+    }
 
-#navTheAbout {
-    margin-right: 8%;
-}
+    #navTheAbout {
+        margin-right: 8%;
+    }
 
-#navTheSettings {
-    margin-right: 2.5%;
-}
+    #navTheSettings {
+        margin-right: 2.5%;
+    }
