--- a/TemperaturProjektet/Main files/About.css
+++ b/TemperaturProjektet/Main files/About.css
@@ -25,26 +25,27 @@ body{
     margin-bottom: 0;
 }
 
-#aboutProject {
-    width: 70%;
-    padding: 1%;
-    text-align: center;
-}   #aboutProject:hover {background-color: rgb(255, 255, 255, 25%); border: 2px rgb(220, 0, 0) solid; border-radius: 4px;}
+/*:hover for text visibility*/
+    #aboutProject {
+        width: 70%;
+        padding: 1%;
+        text-align: center;
+    }   #aboutProject:hover {background-color: rgb(255, 255, 255, 25%); border: 2px rgb(220, 0, 0) solid; border-radius: 4px;}
 
-#contacts {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    justify-content: space-evenly;
-}
+    #contacts {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        justify-content: space-evenly;
+    }
 
-.contact {
-    padding: 2%;
-    text-align: center;
-}   .contact:hover {background-color: rgb(255, 255, 255, 25%); border: 2px rgb(220, 0, 0) solid; border-radius: 4px;}
+    .contact {
+        padding: 2%;
+        text-align: center;
+    }   .contact:hover {background-color: rgb(255, 255, 255, 25%); border: 2px rgb(220, 0, 0) solid; border-radius: 4px;}
 
-.copyEmail {
-    background-color: transparent;
-    border: 2px rgb(220, 0, 0) solid;
-    border-radius: 4px;
-}   .copyEmail:hover {background-color: rgb(255, 82, 75);}
+    .copyEmail {
+        background-color: transparent;
+        border: 2px rgb(220, 0, 0) solid;
+        border-radius: 4px;
+    }   .copyEmail:hover {background-color: rgb(255, 82, 75);}
