--- a/TemperaturProjektet/Main files/About.css
+++ b/TemperaturProjektet/Main files/About.css
@@ -37,6 +37,7 @@ body{
         flex-direction: row;
         justify-content: center;
         justify-content: space-evenly;
+        margin-top: 5%;
     }
 
     .contact {
